[project]
name = "pulse-classification"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "onnx>=1.17.0",
    "onnxscript>=0.2.4",
]
